  * pg_upgradecluster: Handle more configuration parameter transitions:
    - syslog -> log_destination
    - log_statement: false/true -> none/all
    - log_{pid,timestamp,hostname,source_port} -> log_line_prefix
    - obsolete max_expr_depth
  * pg_upgradecluster: Use new replace_conf_value() function which
    produces nicer configuration files with transitioned parameters.

 -- Martin Pitt <mpitt@debian.org>  Tue, 14 Jun 2005 22:58:33 +0200

postgresql-common (15) unstable; urgency=low

  * First unstable upload, welcome to the PostgreSQL future.
  * Quiet maintenance:
    - pg_maintenance: Supply -q to vacuumdb unless in verbose mode.
    - postgresql-common.cron.d: Direct stdout to /dev/null.
    - Adapted tests/060_maintenance expected output.
    - Closes: #312298

 -- Martin Pitt <mpitt@debian.org>  Tue,  7 Jun 2005 12:11:48 +0200

postgresql-common (14) experimental; urgency=low

  * pg_ctlcluster: Check whether mutually exclusive log_*_stats are enabled
    to avoid the "FATAL:  invalid cache id: 30" error on client invocations.
  * Added test 110_invalid_conf: test checking of invalid configurations.
  * Ship test suite in /usr/share/postgresql-common.
  * pg_ctlcluster: Fix logging of autovacuum daemon.
  * pg_ctlcluster: Check if autovacuum daemon is really running, exit with an
    error and print log if not.

 -- Martin Pitt <mpitt@debian.org>  Sun,  5 Jun 2005 11:19:08 +0200

postgresql-common (13) experimental; urgency=low

  * pg_createcluster: Add option --start to start the new cluster right after
    creating it.
  * tests/000_existing_clusters: Check for stale postmaster and pg_autovacuum
    processes.
  * testsuite:
    - Temporarily stop existing servers and move away existing files before
      executing the tests.
    - Restore the original files after the tests.
  * pg_upgradecluster: Check return value of pg_dumpall and psql and fail if
    they are not successful.
  * pg_createuser: Fix indentation of socket warning.