@@ -5,7 +5,6 @@ Bugs:
 - parse and use avac_debug
 - pg_upgradecluster: try to start the new cluster on temp port with
   new conffiles before changing the ports
-- pg_upgradecluster: handle 7.4->8.0 option transitions:
 - pg_upgradecluster: Fix log rotation of old log file.
 
 Transition bugs:
