@@ -1,0 +1,113 @@
+#!/bin/sh -e
+
+# Test transitioning of obsolete configuration parameters.
+
+pg_createcluster 7.4 pg74
+cat <<EOF > /etc/postgresql/7.4/pg74/postgresql.conf
+tcpip_socket = true
+max_connections = 100
+superuser_reserved_connections = 2
+port = 5433
+unix_socket_directory = '/var/run/postgresql'
+unix_socket_group = ''
+unix_socket_permissions = 0777
+virtual_host = ''
+rendezvous_name = ''
+authentication_timeout = 60
+ssl = false
+password_encryption = true
+krb_server_keyfile = ''
+db_user_namespace = false
+shared_buffers = 1000
+sort_mem = 1024
+vacuum_mem = 8192
+max_fsm_pages = 20000
+max_fsm_relations = 1000
+max_files_per_process = 1000
+preload_libraries = ''
+fsync = true
+wal_sync_method = fsync
+wal_buffers = 8
+checkpoint_segments = 3
+checkpoint_timeout = 300
+checkpoint_warning = 30
+commit_delay = 0
+commit_siblings = 5
+enable_hashagg = true
+enable_hashjoin = true
+enable_indexscan = true
+enable_mergejoin = true
+enable_nestloop = true
+enable_seqscan = true
+enable_sort = true
+enable_tidscan = true
+effective_cache_size = 1000
+random_page_cost = 4
+cpu_tuple_cost = 0.01
+cpu_index_tuple_cost = 0.001
+cpu_operator_cost = 0.0025
+geqo = true
+geqo_threshold = 11
+geqo_effort = 1
+geqo_generations = 0
+geqo_pool_size = 0
+geqo_selection_bias = 2.0
+default_statistics_target = 10
+from_collapse_limit = 8
+join_collapse_limit = 8
+syslog = 0
+syslog_facility = 'LOCAL0'
+syslog_ident = 'postgres'
+client_min_messages = notice
+log_min_messages = notice
+log_error_verbosity = default
+log_min_error_statement = panic
+log_min_duration_statement = -1
+silent_mode = false
+debug_print_parse = false
+debug_print_rewritten = false
+debug_print_plan = false
+debug_pretty_print = false
+log_connections = true
+log_duration = false
+log_pid = true
+log_statement = true
+log_timestamp = true
+log_hostname = true
+log_source_port = true
+log_parser_stats = false
+log_planner_stats = false
+log_executor_stats = false
+stats_start_collector = true
+stats_command_string = false
+stats_block_level = false
+stats_row_level = true
+stats_reset_on_server_start = true
+search_path = '\$user,public'
+default_transaction_isolation = 'read committed'
+default_transaction_read_only = false
+statement_timeout = 0
+datestyle = 'ISO,European'
+australian_timezones = false
+extra_float_digits = 0
+dynamic_library_path = '/usr/share/postgresql:/usr/lib/postgresql'
+max_expr_depth = 10000
+deadlock_timeout = 1000
+max_locks_per_transaction = 64
+add_missing_from = true
+regex_flavor = advanced
+sql_inheritance = true
+transform_null_equals = false
+EOF
+
+pg_ctlcluster -s 7.4 pg74 start
+pg_lsclusters
+pg_upgradecluster 7.4 pg74
+pg_dropcluster 7.4 pg74
+pg_lsclusters
+echo "New configuration:"
+echo "--------------------"
+cat /etc/postgresql/8.0/pg74/postgresql.conf
+echo "--------------------"
+pg_dropcluster --stop-server 8.0 pg74
+
