@@ -12,8 +12,10 @@ postgresql-common (16) unstable; urgency=low
     - obsolete max_expr_depth
   * pg_upgradecluster: Use new replace_conf_value() function which
     produces nicer configuration files with transitioned parameters.
+  * Add test 120_obsolete_confparams: Upgrade a 7.4 cluster with all
+    possible 7.4 options enabled.
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 14 Jun 2005 22:58:33 +0200
+ -- Martin Pitt <mpitt@debian.org>  Tue, 14 Jun 2005 23:18:01 +0200
 
 postgresql-common (15) unstable; urgency=low
 
